--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /xcode/PipelineSample.xcodeproj/xcuserdata/
 
 /xcode/PipelineSample.xcodeproj/project.xcworkspace/xcuserdata/
+
+/xcode/Cinder-Tessellation.xcodeproj/xcuserdata/
+
+/xcode/Cinder-Tessellation.xcodeproj/project.xcworkspace/xcuserdata/
+
+/xcode/Cinder-Tessellation.xcodeproj/project.xcworkspace/xcshareddata/
+
+/xcode/build/
